--- a/dummyStyle.css
+++ b/dummyStyle.css
@@ -7,13 +7,14 @@ div.wrapper {
 
 div.Banner {
     width: 100%;
-    padding:2px;
+    padding-top:2px;
+    padding-bottom:2px;
     background-color: #333333;
     color: whitesmoke;
     font-family:"Times New Roman", Times, serif;
 }
 
-#banner_wrapper {
+div.banner_wrapper {
     width: 100%;
 }
 
@@ -106,9 +107,10 @@ ul.banner_menu {
     font-size: 125%;
     width: 100%;
     background-color: lightslategray;
-    padding: 0.5%;
-   /* border-bottom:5px solid #CC9900; */
-    margin: 0px 0px 0px 0px ;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+    padding-left: 0%;
+    margin: 0px 1% 0px 0px ;
 
     display: inline-block;
 }
@@ -127,12 +129,12 @@ ul li.banner_menu_option {
     text-align: center;
     line-height: 21px;
 }
-ul li.banner_menu_option ul {
+/*ul li.banner_menu_option ul {
     display: none;
     position: absolute;
     z-index: 999;
     left: 0;
-}
+} */
 
 body {
     margin: 0px;
